[gd_scene load_steps=2 format=3 uid="uid://ct4mnxgtkxsbr"]

[ext_resource type="Script" path="res://src/ui/tenant_picker.gd" id="1_ne83v"]

[node name="TenantPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ne83v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlatSummary" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "fghfghfg"
fit_content = true

[node name="ItemContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
mouse_filter = 2
alignment = 1

[node name="IgnoreButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Keep apartment unoccupied"

[connection signal="pressed" from="VBoxContainer/IgnoreButton" to="." method="_on_ignore_button_pressed"]
